<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="24dp"
    >

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/viewpager_description"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tabGravity="center"
        app:tabIndicatorGravity="center"
        app:tabIndicator="@drawable/dot"
        app:tabIndicatorColor="#8140C9"
        app:layout_constraintTop_toBottomOf="@id/viewPager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/tablayout_description">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:contentDescription="@string/image_button_1"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:contentDescription="@string/image_button_2"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:contentDescription="@string/image_button_3"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:contentDescription="@string/image_button_4"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:contentDescription="@string/image_button_5"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:contentDescription="@string/image_button_6"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:contentDescription="@string/image_button_7"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:contentDescription="@string/image_button_8"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:contentDescription="@string/image_button_9"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:contentDescription="@string/image_button_10"/>

    </com.google.android.material.tabs.TabLayout>

    <Button
        android:id="@+id/donebutton"
        android:layout_marginTop="5dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tablayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/welcome_done_button"
        android:contentDescription="@string/welcome_done_description"/>


</androidx.constraintlayout.widget.ConstraintLayout>

